Complete updating index.html

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="بعدش چی میشه؟ آینده‌های محتمل برای کووید-۱۹، بر اساس شبیه‌سازی‌هایی بازی‌ناک<">  <!-- TRANSLATE: content -->
 	<meta name="twitter:description" content="یک راهنمای تعاملی">  <!-- TRANSLATE: content -->
-	<meta name="twitter:image" content="https://ncase.me/کووید-۱۹/sharing/thumbnail.png">
+	<meta name="twitter:image" content="https://ncase.me/COVID-19/sharing/thumbnail.png">
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="بعدش چی میشه؟ آینده‌های محتمل برای کووید-۱۹، بر اساس شبیه‌سازی‌هایی بازی‌ناک<">  <!-- TRANSLATE: content -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="کووید-۱۹/https://mehdi-mostafavi.github.io">
-	<meta property="og:image" content="https://ncase.me/کووید-۱۹/sharing/thumbnail.png">
+	<meta property="og:url" content="https://mehdi-mostafavi.github.io/COVID-19">
+	<meta property="og:image" content="https://ncase.me/COVID-19/sharing/thumbnail.png">
 	<meta property="og:description" content="یک راهنمای تعاملی">  <!-- TRANSLATE: content -->
 	<meta property="og:site_name" content="بعدش چی میشه؟ آینده‌های محتمل برای کووید-۱۹، بر اساس شبیه‌سازی‌هایی بازی‌ناک<">  <!-- TRANSLATE: content -->
 	
@@ -127,7 +127,7 @@
 
 	<p><strong>همه‌گیرشناس‌ها، از شبیه‌ساز همه‌گیری استفاده می‌کنن تا چه جوری سقوط جامعهٔ‌ بشری رو رقم نزنن!</strong></p>
 
-	<p>خب، بیاید خیلی خیلی ساده یه «شبیه‌ساز پرواز همه‌گیری» بسازیم! توی این شبیه‌سازی، افراد مبتلای مسری<icon i></icon> می‌تونن افراد مستعد<icon s></icon> رو تبدیل به افراد مبتلای مسری<icon i></icon> بیشتری کنن:</p>
+	<p>خب، بیاید خیلی خیلی ساده یه «شبیه‌ساز-پرواز همه‌گیری» بسازیم! توی این شبیه‌سازی، افراد مبتلای مسری<icon i></icon> می‌تونن افراد مستعد<icon s></icon> رو تبدیل به افراد مبتلای مسری<icon i></icon> بیشتری کنن:</p>
 
 	<p><img src="pics/spread.png" alt=""></p>
 
@@ -273,7 +273,7 @@
 
 	<p>رسیدن به 1>R.</p>
 
-	<p> خوب، بیاید از «شبیه‌ساز پرواز همه‌گیری»‌مون استفاده کنیم تا بفهمیم:<strong>چه‌ راهی وجود داره که به 1>R برسیم و همزمان سلامت روان و اقتصادمون رو حفظ کنیم؟</strong></p>
+	<p> خوب، بیاید از «شبیه‌ساز-پرواز همه‌گیری»‌مون استفاده کنیم تا بفهمیم:<strong>چه‌ راهی وجود داره که به 1>R برسیم و همزمان سلامت روان و اقتصادمون رو حفظ کنیم؟</strong></p>
 
 	<p>خودتون رو آمادهٔ یک فرود اضطراری کنید…</p>
 
@@ -298,7 +298,7 @@
 
 	<p>خوب نیست.</p>
 
-	<p>این همون چیزیه که <a href="http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/کووید-۱۹/report-9-impact-of-npis-on-کووید-۱۹/">تحقیق ۱۶ مارس امپریال کالج لندن</a> کشف کرد: هیچ کاری نکنید، اونوقت تخت‌های ICUمون تموم می‌شه و بیش از ۸۰٪ مردم مبتلا به بیماری می‌شن. ( یادمون باشه: مجموع موارد از سطح ایمنی جمعی <em>فراتر</em> می‌ره.)</p>
+	<p>این همون چیزیه که <a href="http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/COVID-19/report-9-impact-of-npis-on-COVID-19/">تحقیق ۱۶ مارس امپریال کالج لندن</a> کشف کرد: هیچ کاری نکنید، اونوقت تخت‌های ICUمون تموم می‌شه و بیش از ۸۰٪ مردم مبتلا به بیماری می‌شن. ( یادمون باشه: مجموع موارد از سطح ایمنی جمعی <em>فراتر</em> می‌ره.)</p>
 
 	<p>حتی اگه ۰.۵٪ درصد افراد مبتلا فوت کنن <sup id="ref15"><a href="#fn15" rel="footnote">15</a></sup>- فرضی سخاوتمندانه وقتی ICU‌ای در کار نیست- در کشورهایی بزرگی مانند ایالات متحده، با ۳۰۰ میلیون جمعیت، ۰.۵٪ از ۸۰٪ ۳۰۰ میلیون = ۱.۲ میلیون فوت کردن… <em>اگه هیچ کاری نکنیم</em>.</p>
 
@@ -641,7 +641,7 @@
 	        <iframe src="sim?stage=SB&format=sb" width="800" height="540"></iframe>
 	</div>
 
-	<p>این «شبیه‌ساز-پرواز همه‌گیری» خیلی چیزها رو به ما یاد داد. به ما اجازه داده به سوالتی در مورد ماه‌های پیشین، ماه‌های پیش‌رو و سال‌های آینده پاسخ بدیم.</p>
+	<p>همین «شبیه‌ساز-پرواز همه‌گیری» ساده خیلی چیزها به ما یاد داد. به ما اجازه داد به سوالتی در مورد ماه‌های پیشین، ماه‌های پیش‌رو و سال‌های آینده پاسخ بدیم.</p>
 
 	<p>حالا در نهایت، بیاید برگردیم به...</p>
 
@@ -666,9 +666,9 @@
 
 	<p><strong>برای سیساست‌مدارها:</strong> قوانینی رو به جریان بیندازید که از افرادی که باید خود-قرنطینگی کنن مراقبت بشه. ردیابان مخاطب بیشتری استخدام کنید، در کنارش از اپ‌های ردیاب مخاطب مبتنی بر حفظ حریم شخصی حمایت کنید. بودجهٔ بیشتری رو به ساخت چیزهایی اختصاص بدید که …</p>
 
-	<p><strong>برای سازندگان:</strong> وسایل مورد نیاز آزمایش رو بسازید. دستگاه تنفس مصنوعی بسازید. تجهزات حفاضت شخصی برای کادر درمانی بیمارستان‌ها بسازید. وسایل آزمایشگاهی بسازید. ماسک درست کنید. اپ بنویسید. درمان‌های ضد ویروس و پیش‌گیری کننده آماده کنید. واکسن تهیه کنید. تست بسازید. تست بسازید. تست بسازید. امید درست کنید.</p>
+	<p><strong>برای سازندگان:</strong> وسایل مورد نیاز آزمایش رو بسازید. دستگاه‌های تنفس مصنوعی بسازید. تجهزات حفاضت شخصی برای کادر درمانی بیمارستان‌ها بسازید. وسایل آزمایشگاهی بسازید. ماسک درست کنید. اپ بنویسید. درمان‌های ضد ویروس و پیش‌گیری کننده آماده کنید. واکسن تهیه کنید. آزمایش بسازید. آزمایش بسازید. آزمایش بسازید. امید درست کنید.</p>
 
-	<p>ترس رو از بین نبرید تا امید شکل بگیره. ترس و امید باید با هم تیم باشن، مثل مخترعان هواپیما و چتر نجات. آماده شدن برای یه آینده ترسناک باعث می‌شه یه آینده امیدوار کننده بسازیم.</p>
+	<p>ترس رو از بین نبریم تا امید شکل بگیره. ترس و امید باید با هم تیم باشن، مثل مخترعان هواپیما و چتر نجات. آماده شدن برای یه آینده ترسناک باعث می‌شه یه آینده امیدوار کننده بسازیم.</p>
 
 	<p>تنهای چیزی که باید ازش بترسیم این ایده است که از تنها چیزی که باید بترسیم فقط ترسه.</p>
 
@@ -757,7 +757,7 @@
 	</li>
 
 	<li id="fn14">
-	<p>« تعداد تخت‌های مراقبت ویژه = ۹۶۵۹۵». بر اساس آمار <a href="https://sccm.org/Blog/March-2020/United-States-Resource-Availability-for-کووید-۱۹">انجمن مراقبت‌های ویژهٔ پزشکی</a> جمعیت ایالات متحده آمریکا در سال ۲۰۱۹ برابر با ۳۲۸،۲۰۰،۰۰۰ نفر بوده. ۹۶۵۹۵ از ۳۲۸،۲۰۰،۰۰ = حدود ۱ از ۳۴۰۰. &nbsp;<a href="#fnref14" rev="footnote">&#8617;</a></p>
+	<p>« تعداد تخت‌های مراقبت ویژه = ۹۶۵۹۵». بر اساس آمار <a href="https://sccm.org/Blog/March-2020/United-States-Resource-Availability-for-COVID-19">انجمن مراقبت‌های ویژهٔ پزشکی</a> جمعیت ایالات متحده آمریکا در سال ۲۰۱۹ برابر با ۳۲۸،۲۰۰،۰۰۰ نفر بوده. ۹۶۵۹۵ از ۳۲۸،۲۰۰،۰۰ = حدود ۱ از ۳۴۰۰. &nbsp;<a href="#fnref14" rev="footnote">&#8617;</a></p>
 	</li>
 
 	<li id="fn15">
@@ -932,6 +932,7 @@
 		<b style='font-size: 100px;position: relative;top: -24px;'>
 			مالکیت عمومی
 		</b>
+		<br>
 		معنی‌ایش اینه که شما <em>همین الان</em> اجازه دارید هر بخشی از طرح/کد/کلمات این صفحه رو باز-استفاده یا با تغییرات استفاده کنید - توی وبلاگ‌تون، سایت خبری‌تون، کلاس درس‌تون یا هر جای دیگه.
 		<a href='https://github.com/mehdi-mostafavi/covid-19'>
 			سری به کدمون روی گیت‌هاب هم بزنید.
@@ -940,15 +941,13 @@
 		<b>
 			فقط یادتون باشه به
 			<a href='https://scholar.google.com/citations?user=_wHMGkUAAAAJ&hl=en'>مارسل سالثه</a>
-			&
+			و
 			<a href='https://ncase.me/'>نیکی کیس</a>
-			&
+			به عنوان نویسندگان و
 			<a href='https://mehdi-mostafavi.ir'>سید مهدی مصطفوی گرجی</a>
-			&
+			و
 			<a href='https://scholar.google.com/citations?user=jsHuvKEAAAAJ&hl=en'>آرش پوردامغانی</a>
 			به عنوان مترجمان ارجاع بدید.
-			و تشکر از بقیه دوستانی که توی این پروژه کمکمون کردن:
-			رضا ترابی، مرتضی‌علی مهدوی 
 			(اردیبهشت 1399)
 		</b>
 		
@@ -961,12 +960,12 @@
 		اگه در ایران هستید و می‌تونید کمک کنید، از طرف ما به طرح کرونای <a href='https://donation.sosapoverty.org/donate/corona'>جمعیت امام علی</a> کمک کنید.
 		اگه نه، با اشتراک‌گذاری این راهنما یا
 		<a href='https://ncase.me/'> بقیهٔ آموزش‌های تعاملی</a>.
-		( که برای یادگیری در خانه عالین، اگه هنوز مدارس به خاطر همه‌گیر بسته است.) از نویسندگان حمایت کنید.
+		( که برای یادگیری در خانه عالین، اگه هنوز مدارس‌تون به خاطر همه‌گیر بسته است.) از نیکی حمایت کنید.
 
 
 		<br><br>
 
-		در زیر لیست بعضی از حامیان نیکی که باعث نوشته شدن این متن شدن رو می‌تونید ببیند:
+		در زیر لیست بعضی از حامیان Patreon که باعث نوشته شدن این متن شدن رو می‌تونید ببیند:
 
 		<br><br>
 
@@ -976,7 +975,7 @@
 
 		<br><br>
 		
-و نیکی از افراد زیر هم  که به بررسی محتوا کمک کردن تشکر می‌کنه:
+و از افراد زیر هم  که به بررسی محتوا کمک کردن تشکر می‌کنیم:
 		<br>
 		Alex Kreitzberg,
 		Amit Patel,
@@ -992,11 +991,12 @@
 		Ridima Ramesh,
 		Sofia Razón,
 		Srini Kadamati,
-		Vi Hart
-
+		Vi Hart,
+		رضا ترابی، 
+		مرتضی‌علی مهدوی 
 		<br><br>
 
-		اگر اشتباهی در محتوا باقی مانده باشد تقصیر من(نیکی) است و اشتباهات احتمالی ترجمه به عهدهٔ مترجمان.
+		اگر اشتباهی در محتوا باقی مانده باشد تقصیر منه(نیکی) و اشتباهات احتمالی ترجمه به عهدهٔ مترجمان.
 
 	</div>
 
