Just a translate fix

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	    </div>
 	</div>
 
-	<p>خلبان‌های از شبیه‌ساز پرواز استفاده می‌کنن تا یاد بگیرن چه جوری هواپیما‌شون سقوط نکنه!</p>
+	<p>خلبان‌ها از شبیه‌ساز پرواز استفاده می‌کنن تا یاد بگیرن چه جوری هواپیما‌شون سقوط نکنه!</p>
 
 	<p><strong>همه‌گیرشناس‌ها، از شبیه‌ساز همه‌گیری استفاده می‌کنن تا چه جوری سقوط جامعهٔ‌ بشری رو رقم نزنن!</strong></p>
 
