Resolving sim RTL problem - test 1

--- a/sim/index.html
+++ b/sim/index.html
@@ -14,9 +14,9 @@
 
 			<div id="hide_on_first_playthrough">
 				<div id="section_dynamics">
-
+				    <icon i></icon>
 					به صورت <i>میانگین</i>،
-					هر <icon i></icon>...
+					هر...
 					<br><br>
 					
 					<div id="label_transmission">
@@ -206,7 +206,7 @@
 				<br class="lines">
 				
 				<span id="label_capacity">
-				––– ظرفیت ICU
+				––– ICU ظرفیت
 				</span>
 
 			</div>
