Different direction for input and text - test

--- a/sim/index.html
+++ b/sim/index.html
@@ -20,13 +20,13 @@
 					هر
 					<br><br>
 					
-					<div id="label_transmission">
+					<div direction="rtl" id="label_transmission">
 						هر<icon s></icon> در <span id="label_p_transmission">N</span> روز مبتلا میکنه.
 						<br>
 						<span id="label_transmission_caveat">
 							(در شروع اپیدمی)<br>
 						</span>
-						<input class="sim_input" type="range" id="p_transmission" min="1" max="30" step="1" value="4">
+						<input direction="ltr" class="sim_input" type="range" id="p_transmission" min="1" max="30" step="1" value="4">
 					</div>
 
 					<div id="label_c_exposed">
