--- a/sim/index.html
+++ b/sim/index.html
@@ -13,16 +13,15 @@
 		<div id="controls">
 
 			<div id="hide_on_first_playthrough">
-				<div id="section_dynamics" direction="rtl">
+				<div id="section_dynamics">
 					...
 					<icon i></icon>
 					به صورت <i>میانگین</i>،
 					هر
 					<br><br>
 					
-					<div id="label_transmission" direction="rtl">
-						هر<icon s></icon> رو در <span id="label_p_transmission">N</span> روز مبتلا می‌کنه.
-						<br>
+					<div id="label_transmission">
+						<p direction="rtl">هر<icon s></icon> رو در <span id="label_p_transmission">N</span> روز مبتلا می‌کنه.</p>
 						<span id="label_transmission_caveat">
 							(در شروع اپیدمی)<br>
 						</span>
