--- a/sim/index.html
+++ b/sim/index.html
@@ -21,18 +21,19 @@
 					<br><br>
 					
 					<div id="label_transmission">
-						<p direction="rtl">هر<icon s></icon> رو در <span id="label_p_transmission">N</span> روز مبتلا می‌کنه.</p>
+						هر.<icon s></icon> رو در <span id="label_p_transmission">N</span> روز مبتلا می‌کنه
+						<br>
 						<span id="label_transmission_caveat">
-							(در شروع اپیدمی)<br>
+							(در شروع همه‌گیری)<br>
 						</span>
-						<input class="sim_input" type="range" id="p_transmission" direction="ltr"  min="1" max="30" step="1" value="4">
+						<input class="sim_input" type="range" id="p_transmission" min="1" max="30" step="1" value="4">
 					</div>
 
 					<div direction="rtl" id="label_c_exposed">
 						<input class="sim_checkbox" type="checkbox" id="c_exposed">
-						 <span id="label_p_exposed">N</span> روز طول می‌کشه تا <icon e></icon> به <icon i></icon> تبدیل بشه.
+						 .روز طول می‌کشه تا <icon e></icon> به <icon i></icon> تبدیل بشه<span id="label_p_exposed">N</span> 
 						<br>
-						<input class="sim_input" type="range" id="p_exposed" direction="ltr" min="1" max="30" step="1" value="3">
+						<input class="sim_input" type="range" id="p_exposed" min="1" max="30" step="1" value="3">
 					</div>
 					
 					<div id="label_c_recovery">
