--- a/sim/index.html
+++ b/sim/index.html
@@ -29,7 +29,7 @@
 						<input class="sim_input" type="range" id="p_transmission" min="1" max="30" step="1" value="4">
 					</div>
 
-					<div direction="rtl" id="label_c_exposed">
+					<div id="label_c_exposed">
 						<input class="sim_checkbox" type="checkbox" id="c_exposed">
 						 .روز طول می‌کشه تا <icon e></icon> به <icon i></icon> تبدیل بشه<span id="label_p_exposed">N</span> 
 						<br>
