--- a/sim/index.html
+++ b/sim/index.html
@@ -55,8 +55,7 @@
 				</div>
 
 				<div id="section_r">
-
-					مقدار R<sub>0</sub> برابره با: <span id="label_p_r0" toFixed="2"></span>
+						<span id="label_p_r0" toFixed="2">	برابره با: مقدار R<sub>0</sub>
 					<canvas class="r_canvas" id="canvas_r0"></canvas>
 					<!--input class="sim_input" type="range" id="p_r0" min="0" max="6" step="0.01" disabled-->
 					<br>
