--- a/sim/index.html
+++ b/sim/index.html
@@ -55,7 +55,8 @@
 				</div>
 
 				<div id="section_r">
-						<span id="label_p_r0" toFixed="2"></span> R<sub>0</sub> برابره با مقدار
+
+					مقدار R<sub>0</sub> برابره با: <span id="label_p_r0" toFixed="2"></span>
 					<canvas class="r_canvas" id="canvas_r0"></canvas>
 					<!--input class="sim_input" type="range" id="p_r0" min="0" max="6" step="0.01" disabled-->
 					<br>
@@ -90,7 +91,7 @@
 						<br>
 					</span>
 					<span id="int_block_3">
-						ماسک‌ها
+						ماسک
 						<br>
 						<input class="sim_input recordable" type="range" id="p_masks" min="0" max="1" step="0.001" value="0">
 						<br>
