--- a/sim/index.html
+++ b/sim/index.html
@@ -21,19 +21,19 @@
 					<br><br>
 					
 					<div id="label_transmission">
-						هر.<icon s></icon> رو در <span id="label_p_transmission">N</span> روز مبتلا می‌کنه
+						هر<icon s></icon> رو در <span id="label_p_transmission">N</span> روز مبتلا می‌کنه.
 						<br>
 						<span id="label_transmission_caveat">
 							(در شروع همه‌گیری)<br>
 						</span>
-						<input class="sim_input" type="range" id="p_transmission" min="1" max="30" step="1" value="4">
+						<input class="sim_input" type="range" id="p_transmission"  min="1" max="30" step="1" value="4">
 					</div>
 
-					<div id="label_c_exposed">
+					<div direction="rtl" id="label_c_exposed">
 						<input class="sim_checkbox" type="checkbox" id="c_exposed">
-						 .روز طول می‌کشه تا <icon e></icon> به <icon i></icon> تبدیل بشه<span id="label_p_exposed">N</span> 
+						 <span id="label_p_exposed">N</span> روز طول می‌کشه تا <icon e></icon> به <icon i></icon> تبدیل بشه.
 						<br>
-						<input class="sim_input" type="range" id="p_exposed" min="1" max="30" step="1" value="3">
+						<input class="sim_input" type="range" id="p_exposed"  min="1" max="30" step="1" value="3">
 					</div>
 					
 					<div id="label_c_recovery">
@@ -91,7 +91,7 @@
 						<br>
 					</span>
 					<span id="int_block_3">
-						ماسک
+						ماسک های صورت
 						<br>
 						<input class="sim_input recordable" type="range" id="p_masks" min="0" max="1" step="0.001" value="0">
 						<br>
