Correcting Translation inside sim

--- a/sim/index.html
+++ b/sim/index.html
@@ -81,11 +81,11 @@
 						<br>
 					</span>
 					<span id="int_block_2">
-						ایزولهٔ موارد مبتلا
+						خود-قرنطینگی موارد مبتلا
 						<br>
 						<input class="sim_input recordable" type="range" id="p_isolate" min="0" max="1" step="0.001" value="0">
 						<br>
-						قرنطینه
+						تعطیلی اجباری
 						<br>
 						<input class="sim_input recordable" type="range" id="p_quarantine" min="0" max="1" step="0.001" value="0">
 						<br>
