--- a/index.html
+++ b/index.html
@@ -960,8 +960,9 @@
 		<a href='https://www.patreon.com/ncase'>نیکی کمک کنید</a>.
 		اگه در ایران هستید و می‌تونید کمک کنید، از طرف ما به طرح کرونای <a href='https://donation.sosapoverty.org/donate/corona'>جمعیت امام علی</a> کمک کنید.
 		اگه نه، با اشتراک‌گذاری این راهنما یا
-		<a href='https://ncase.me/'> بقیهٔ آموزش‌های تعاملی</a>.
-		( که برای یادگیری در خانه عالین، اگه هنوز مدارس‌تون به خاطر همه‌گیر بسته است.) از نیکی حمایت کنید.
+		<a href='https://pourdamghani.github.io/ncase-fa/'> بقیهٔ آموزش‌های تعاملی</a>.
+		( که برای یادگیری توی خانه عالین، اگه هنوز مدارس‌تون به خاطر همه‌گیر بسته است.) 
+		از نیکی و مترجمان حمایت کنید.
 
 
 		<br><br>
