Authors and Translators added

--- a/index.html
+++ b/index.html
@@ -92,12 +92,16 @@
 	                &nbsp;&middot;&nbsp;
 	            </b>
 	            توسط
-	            <a href="https://scholar.google.com/citations?user=_wHMGkUAAAAJ&amp;hl=en">Marcel Salathé</a>
+	            <a href="https://scholar.google.com/citations?user=_wHMGkUAAAAJ&amp;hl=en">مارسل سالاته</a>
 	            همه‌گیرشناس
 	            و
-	            <a href="https://ncase.me/">Nicky Case</a>
-	            طراحی و کد
-	        </div>
+	            <a href="https://ncase.me/">نیکی کیس</a>
+				طراحی و کد،
+				ترجمهٔ
+				<a href='https://scholar.google.com/citations?user=jsHuvKEAAAAJ&hl=en'>آرش پوردامغانی</a>
+				و
+				<a href='https://www.linkedin.com/in/mehdimstv/'>مهدی مصطفوی</a>
+			</div>
 	    </div>
 	</div>
 
@@ -411,7 +415,7 @@
 
 	<p>صبر کنید. یه اپ که افرادی که باهاشون در تماس بودید رو ردگیری کنه؟ … این به معنی اینه که حریم شخصی‌مون رو از دست بدیم، و تحویلش بدیم به برادر بزرگ؟</p>
 
-	<p>به هیچ وجه! <strong><a href="https://github.com/DP-3T/documents#decentralized-privacy-preserving-proximity-tracing">DP-3T</a></strong>،  تیمی از همه‌گیرشناسان و رمزنگاران ( که شامل یکی از ماها هم می‌شه، مارسل سالثه) <em>در حال حاضر</em> دارن روی یک اپ ردیابی مخاطبان منبع باز کار می‌کنن که <strong>هیچ اطلاعات در مورد هویت، موقعیت، افرادی که باهاشون در تماس بودید، یا حتی این که با چند نفر در تماس بودید رو لو نمی‌ده.</strong></p>
+	<p>به هیچ وجه! <strong><a href="https://github.com/DP-3T/documents#decentralized-privacy-preserving-proximity-tracing">DP-3T</a></strong>،  تیمی از همه‌گیرشناسان و رمزنگاران ( که شامل یکی از ماها هم می‌شه، مارسل سالاته) <em>در حال حاضر</em> دارن روی یک اپ ردیابی مخاطبان منبع باز کار می‌کنن که <strong>هیچ اطلاعات در مورد هویت، موقعیت، افرادی که باهاشون در تماس بودید، یا حتی این که با چند نفر در تماس بودید رو لو نمی‌ده.</strong></p>
 
 	<p>این اپ اینجوری کار می‌کنه:</p>
 
@@ -941,7 +945,7 @@
 		<br>
 		<b>
 			فقط یادتون باشه به
-			<a href='https://scholar.google.com/citations?user=_wHMGkUAAAAJ&hl=en'>مارسل سالثه</a>
+			<a href='https://scholar.google.com/citations?user=_wHMGkUAAAAJ&hl=en'>مارسل سالاته</a>
 			و
 			<a href='https://ncase.me/'>نیکی کیس</a>
 			به عنوان نویسندگان و
