--- a/sim/index.html
+++ b/sim/index.html
@@ -10,7 +10,7 @@
 
 	<div id="sandbox">
 	
-		<div id="controls">
+		<div id="controls" dir="rtl">
 
 			<div id="hide_on_first_playthrough">
 				<div id="section_dynamics">
