Update addresses for thumbnail and rest of stuff

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="بعدش چی میشه؟ آینده‌های محتمل برای کووید-۱۹، بر اساس شبیه‌سازی‌هایی بازی‌ناک<">  <!-- TRANSLATE: content -->
 	<meta name="twitter:description" content="یک راهنمای تعاملی">  <!-- TRANSLATE: content -->
-	<meta name="twitter:image" content="https://ncase.me/COVID-19/sharing/thumbnail.png">
+	<meta name="twitter:image" content="https://mehdi-mostafavi.github.io/covid-19/sharing/thumbnail.png">
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="بعدش چی میشه؟ آینده‌های محتمل برای کووید-۱۹، بر اساس شبیه‌سازی‌هایی بازی‌ناک<">  <!-- TRANSLATE: content -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://mehdi-mostafavi.github.io/COVID-19">
-	<meta property="og:image" content="https://ncase.me/COVID-19/sharing/thumbnail.png">
+	<meta property="og:image" content="https://mehdi-mostafavi.github.io/covid-19/sharing/thumbnail.png">
 	<meta property="og:description" content="یک راهنمای تعاملی">  <!-- TRANSLATE: content -->
 	<meta property="og:site_name" content="بعدش چی میشه؟ آینده‌های محتمل برای کووید-۱۹، بر اساس شبیه‌سازی‌هایی بازی‌ناک<">  <!-- TRANSLATE: content -->
 	
@@ -95,7 +95,7 @@
 	            <a href="https://scholar.google.com/citations?user=_wHMGkUAAAAJ&amp;hl=en">مارسل سالاته</a>
 	            همه‌گیرشناس
 	            و
-	            <a href="https://ncase.me/">نیکی کیس</a>
+	            <a href="https://pourdamghani.github.io/ncase-fa/">نیکی کیس</a>
 				طراحی و کد،
 				ترجمهٔ
 				<a href='https://scholar.google.com/citations?user=jsHuvKEAAAAJ&hl=en'>آرش پوردامغانی</a>
@@ -947,7 +947,7 @@
 			فقط یادتون باشه به
 			<a href='https://scholar.google.com/citations?user=_wHMGkUAAAAJ&hl=en'>مارسل سالاته</a>
 			و
-			<a href='https://ncase.me/'>نیکی کیس</a>
+			<a href='https://pourdamghani.github.io/ncase-fa/'>نیکی کیس</a>
 			به عنوان نویسندگان و
 			<a href='https://www.linkedin.com/in/mehdimstv/'>سید مهدی مصطفوی گرجی</a>
 			و
