--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
 	<p><img src="pics/timeline3.png" alt=""></p>
 
-	<p>به این روش می‌گن <strong>ردیابی مخاطبان</strong>، این یک ایدهٔ قدیمه، و روشی که برای مقابله با ابولا در مقایس بی‌نظیری انجام شد<sup id="fnref23"><a href="#fn23" rel="footnote">23</a></sup> و بنیان روشیه که تایوان و کره‌جنوبی برای مهار کووید-۱۹ به کار گرفتن.</p>
+	<p>به این روش می‌گن <strong>ردیابی مخاطبان</strong>، این یک ایدهٔ قدیمیه، و روشی که برای مقابله با ابولا در مقایس بی‌نظیری انجام شد<sup id="fnref23"><a href="#fn23" rel="footnote">23</a></sup> و بنیان روشیه که تایوان و کره‌جنوبی برای مهار کووید-۱۹ به کار گرفتن.</p>
 
 	<p>( این روش هم‌چنین به ما اجازه می‌ده از منابع محدود آز مایش‌هامون به صورت بهینه استفاده کنیم، تا بتونیم<span class="nowrap"><icon i></icon>های</span> بدون علائم رو پیدا کنیم، بدون این که تقریبا همه رو آزمایش کنیم.)</p>
 
