--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/littlefoot.css"/>
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
+	<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101257752);</script>
+	<script async src="//static.getclicky.com/js"></script>
 
 </head>
 
