Translation added + half-spaces corrected

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - -->
 
 <div id="translations">
-	ترجمه ها:
+	ترجمه‌ها:
 	<ul>
 				<li><a href='https://ncase.me/covid-19/'>English (original version)</a></li>
 				<li><a href='https://vrruiz.github.io/covid-19'>Español</a></li>
@@ -49,6 +49,7 @@
 				<li><a href='https://jusplathemus.github.io/covid-19/'>Magyar</a></li>
 				<li><a href='https://dcz-self.github.io/covid-19/'>Polski</a></li>
 				<li><a href='https://saskaaloric.github.io/covid-19/'>Srpski</a></li>
+				<li><a href='https://xmac11.github.io/covid-19/'>Ελληνικά</a></li>
 				<li><a href='https://asherbarak.github.io/covid-19/'>עברית</a></li>
 				<li><a href='https://benbennben.github.io/covid-19/'>한국어</a></li>
 				<li><a href='https://eed3si9n.github.io/covid-19/'>日本語</a></li>
@@ -498,13 +499,13 @@
 	        <iframe src="sim?stage=int-6a&format=calc" width="285" height="380"></iframe>
 	</div>
 
-	<p>(استدلال ها دیگه له/علیه  ماسک ها:<sup id="fnref35"><a href="#fn35" rel="footnote">35</a></sup>)</p>
+	<p>(استدلال‌ها دیگه له/علیه  ماسک‌ها:<sup id="fnref35"><a href="#fn35" rel="footnote">35</a></sup>)</p>
 
 	<p>ماسک‌ها <em>به‌تنهایی</em> منجر به 1>R نمی‌شن. بلکه شست‌شوی دست‌ها و «آزمایش، ردیابی و قرنطینه» فقط می‌تونن ما رو به R=1.10 برسونن. اگه یک سوم مردم ماسک بپوشن، به مقدار 1>R می‌رسیم و در نتیجه ویروس مهار خواهد شد.</p>
 
 	<p><strong>تابستون:</strong></p>
 
-	<p>قبول، این مداخله‌‌ای نیست که بتونیم کنترلش کنیم، اما کمک می‌کنه. بعضی رسانه‌‌های خبری گزارش می‌دن که تابستون هیچ اثری روی کووید-۱۹ نداره، اما این نصف حقیقته، تابستون منجر به 1>R نمی‌شه، اما R رو کاهش می‌ده.</p>
+	<p>قبول، این مداخله‌‌ای نیست که بتونیم کنترلش کنیم، اما کمک می‌کنه. بعضی رسانه‌های خبری گزارش می‌دن که تابستون هیچ اثری روی کووید-۱۹ نداره، اما این نصف حقیقته، تابستون منجر به 1>R نمی‌شه، اما R رو کاهش می‌ده.</p>
 
 	<p>در مورد کووید-۱۹، هر افزایش ۱°‌ سانتیگرادی دما باعث کاهش ۱.۲٪ مقدار R می‌شه.<sup id="fnref36"><a href="#fn36" rel="footnote">36</a></sup> تفاوت دمای تابستون با زمستون در شهر نیویورک ۲۶° است،<sup id="fnref37"><a href="#fn37" rel="footnote">37</a></sup> در نتیجه تابستون R رو حدود ۳۱٪ کم می‌کنه.</p>
 
@@ -1014,7 +1015,7 @@
 
 <div id="footnotes_container">
 	<h2 id='show_feetnotes_button'>(برای نمایش پانویس بزنید)</h2>
-	<h2 id='shown_feetnotes'>پانویس ها:</h2-->
+	<h2 id='shown_feetnotes'>پانویس‌ها:</h2-->
 </div>
 
 <div id="wash">
