changed clicky to google service

--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/littlefoot.css"/>
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
-	<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101257752);</script>
-	<script async src="//static.getclicky.com/js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171097189-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-171097189-1');
+</script>
+
 
 </head>
 
