--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
 	    </div>
 	</div>
 
-	<p>«تنها چیزی که باید ازش ترسید، خود ترسه» نصیحتی احمقانه بود.</p>
+	<p>اینکه میگن «تنها چیزی که باید ازش ترسید، خود ترسه» احمقانه بود.</p>
 
 	<p>درسته، دستمال توالت احتکار نکنید- اما اگه سیاستمدارها از خود ترس بترسند، خطرهای واقعی رو کوچیک جلوه می‌دن تا جلوی «هرج و مرج همگانی» رو بگیرن. ترس مشکل نیست، مشکل <em>روش برخوردمون</em> با ترس‌مونه. ترس به ما انرژی می‌ده تا با خطرات فعلی دست و پنجه نرم کنیم و برای خطرات پیش‌رو آماده باشیم.</p>
 
-	<p>راستش رو بخواید، همه‌ٔ ما (مارسل که همه‌گیرشناسه، نیکی که کدر/طراحه، و تیم ترجمه) نگرانیم. احتمال زیاد شما هم مثل ما نگرانید! روش برخورد ما با ترس‌مون یک <strong>شبیه‌سازی بازی‌ناک</strong> بود، تا <em>شما</em> هم بتونید روشی برای برخورد با ترس‌تون در پیش بگیرید که به آگاهی منجر بشه:</p>
+	<p>راستش رو بخواید، همه‌ٔ ما (مارسل که همه‌گیرشناسه، نیکی که کدر/طراحه، و تیم ترجمه) نگرانیم. احتمال زیاد شما هم مثل ما نگرانید! روش برخورد ما با ترس‌مون یک <strong>شبیه‌سازی بازی‌ناک</strong> بود، تا <em>شما</em> هم بتونید روشی برای برخورد با ترس‌تون در پیش بگیرید که به آگاهی نسبت به این موارد منجر بشه:</p>
 
 	<ul>
 	<li><strong>چند ماه اخیر</strong> (مقدمه‌ای بر همه‌گیرشناسی، مدل SEIR و R یا R<sub>0</sub>)</li>
 	<li><strong>چند ماه پیش‌رو</strong> (تعطیلی اجباری، ردیابی مخاطب، ماسک‌ها)</li>
-	<li><strong>چند سال آینده</strong> ( از بین رفتن  مصونیت؟، واکسنی نیست؟)</li>
+	<li><strong>چند سال آینده</strong> ( از بین رفتن  مصونیت؟ واکسنی نیست؟)</li>
 	</ul>
 
 	<p>این راهنما (ساخته شده در ۱۲ اردیبهشت ۱۳۹۹، روی این پانویس بزنید!←<sup id="fnref1"><a href="#fn1" rel="footnote">1</a></sup>) به وجود اومده تا به شما ترس <em>و</em> امید بده. ما برای این‌که بتونیم راهی برای شکست کووید-۱۹ پیدا کنیم، که بتونه<strong> سلامت روان و سلامت اقتصادمون</strong> رو هم تامین کنه، به خوش‌بینی نیاز داریم تا برنامه‌ای داشته باشیم، و به بدبینی نیاز داریم تا برنامه‌های پشتیبان داشته باشیم. همان‌جور که گلادیس براونین گفته: «<em>یه خوش‌بین هواپیما رو اختراع کرده و یه بدبین چتر نجات رو</em>».</p>
@@ -141,7 +141,7 @@
 
 	<p>خلبان‌ها از شبیه‌ساز پرواز استفاده می‌کنن تا یاد بگیرن چه جوری هواپیما‌شون سقوط نکنه!</p>
 
-	<p><strong>همه‌گیرشناس‌ها، از شبیه‌ساز همه‌گیری استفاده می‌کنن تا چه جوری سقوط جامعهٔ‌ بشری رو رقم نزنن!</strong></p>
+	<p><strong>همه‌گیرشناس‌ها، از شبیه‌ساز همه‌گیری استفاده می‌کنن تا بفمن چه جوری سقوط جامعهٔ‌ بشری رو رقم نزنن!</strong></p>
 
 	<p>خب، بیاید خیلی خیلی ساده یه «شبیه‌ساز-پرواز همه‌گیری» بسازیم! توی این شبیه‌سازی، افراد مبتلای مسری<icon i></icon> می‌تونن افراد مستعد<icon s></icon> رو تبدیل به افراد مبتلای مسری<icon i></icon> بیشتری کنن:</p>
 
@@ -185,9 +185,9 @@
 	        <iframe src="sim?stage=epi-3" width="800" height="540"></iframe>
 	</div>
 
-	<p>این برعکس رشد نماییه، <strong>نمودار زوال نمایی</strong>.</p>
+	<p>این برعکس رشد نماییه، یه نمودار هدفجو که اولش با سرعت خیلی زیادی کم میشه و آروم آروم این سرعت کاهش پیدا میکنه.</p>
 
-	<p>خوب به نظرتون چی می‌شه اگه این توابع «S-شکل» رشد و زوال نمایی رو همراه همدیگه شبیه‌سازی کنیم؟</p>
+	<p>خوب به نظرتون چی می‌شه اگه این توابع «S-شکل» رشد و بهبود یافتن رو همراه همدیگه شبیه‌سازی کنیم؟</p>
 
 	<p><img src="pics/graphs_q.png" alt=""></p>
 
@@ -589,7 +589,7 @@
 	        <iframe src="sim?stage=yrs-1&format=lines&height=600" width="800" height="600"></iframe>
 	</div>
 
-	<p>بازگشت نزول نمایی!</p>
+	<p>بازگشت همون نمودار نزولی!</p>
 
 	<p>به این مدل <strong>SEIRS</strong> می‌گن. حرف "S" در این مخفف برای کلمهٔ مستعد (Susceptible) هستش، که یه بار دیگه ظاهر شده.</p>
 
@@ -635,7 +635,7 @@
 
 	<p>1) مداخلات متناوب و ضعیفی برای رسیدن به 1>R انجام بدیم، تا به تدریج به «ایمنی جمعی طبیعی» برسیم. (اخطار: این روش به کلی مرگ و میر و ریه‌های از بین رفته منجر می‌شه. هم‌چنین اگه ایمنی به دست اومده طولانی نباشه به درد نمی‌خوره.)</p>
 
-	<p>2) برای همیشه مداخلات که منجر به 1>R می‌شن رو انجام بدیم. ردیابی مخاطبان و پوشیدن ماسک شاید به اتفاقی طبیعی در دنیای پسا-کووید-۱۹ تبدیل بشه، مثل طبیعی شدن آزمایش‌های بیماری‌های آمیزشی و استفاده از کاندوم در دنیای پسا-اچ‌آی‌وی.</p>
+	<p>2) برای همیشه مداخلات که منجر به 1>R می‌شن رو انجام بدیم. ردیابی مخاطبان و پوشیدن ماسک شاید به اتفاقی طبیعی در دنیای پسا-کووید-۱۹ تبدیل بشه.</p>
 
 	<p>3) انجام مداخلات برای داشتن 1>R تا زمانی که به درمانی دست پیدا کنیم که اثرات کووید-۱۹ رو به قدری کاهش بده که مبتلایان نیاز بسیار کمی به مراقبت‌های حیاتی بیمارستانی داشته باشن. (البته باید در <em>هر صورت</em> دنبال چنین درمان‌‌هایی باشیم!) کاهش ۱۰ برابری استفاده از بخش مراقبت‌های ویژه معنی ۱۰ برابر شدن ظرفیت‌شون رو هم می‌ده:</p>
 
@@ -974,7 +974,7 @@
 		اگه (جدی، فقط اگه) درآمد اضافه‌ای دارید، می‌تونید به
 		<a href='https://www.patreon.com/ncase'>نیکی کمک کنید</a>.
 		اگه نه، با اشتراک‌گذاری این راهنما یا
-		<a href='https://pourdamghani.github.io/ncase-fa/'> بقیهٔ آموزش‌های تعاملی</a>.
+		 بقیهٔ آموزش‌های تعاملی.
 		( که برای یادگیری توی خانه عالین، اگه هنوز مدارس‌تون به خاطر همه‌گیر بسته است.) 
 		از نیکی و مترجمان حمایت کنید.
 
