--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 	    </div>
 	</div>
 
-	<p>اینکه میگن «تنها چیزی که باید ازش ترسید، خود ترسه» احمقانه بود.</p>
+	<p>سلام!</p>
 
-	<p>درسته، دستمال توالت احتکار نکنید- اما اگه سیاستمدارها از خود ترس بترسند، خطرهای واقعی رو کوچیک جلوه می‌دن تا جلوی «هرج و مرج همگانی» رو بگیرن. ترس مشکل نیست، مشکل <em>روش برخوردمون</em> با ترس‌مونه. ترس به ما انرژی می‌ده تا با خطرات فعلی دست و پنجه نرم کنیم و برای خطرات پیش‌رو آماده باشیم.</p>
+	<p>چیزی که در ادامه می‌بینید بخشی از یک شبیه‌سازی بازی طوره که یک برنامه‌نویس سال 99 برای توضیح آینده‌های احتمالی که برای کرونا ممکنه اتفاق بیفته و کارهایی که می‌تونیم براش انجام بدیم طراحی کرده.</p>
 
-	<p>راستش رو بخواید، همه‌ٔ ما (مارسل که همه‌گیرشناسه، نیکی که کدر/طراحه، و تیم ترجمه) نگرانیم. احتمال زیاد شما هم مثل ما نگرانید! روش برخورد ما با ترس‌مون یک <strong>شبیه‌سازی بازی‌ناک</strong> بود، تا <em>شما</em> هم بتونید روشی برای برخورد با ترس‌تون در پیش بگیرید که به آگاهی نسبت به این موارد منجر بشه:</p>
+	<p>من اینجا فقط قسمتی از بخش اول توضیحاتش رو آوردم تا نمودارها و محدودیت رشد رو توش ببینید. اگر دوست دارید شبیه‌سازی کامل رو ببینید می‌تونید به <a href='https://raziehkouch.github.io/covid-19/'>این لینک</a> سر بزنید. البته ترجمه‌اش جای بهتر شدن داره :)</p>
 
 	<ul>
 	<li><strong>چند ماه اخیر</strong> (مقدمه‌ای بر همه‌گیرشناسی، مدل SEIR و R یا R<sub>0</sub>)</li>
