--- a/index.html
+++ b/index.html
@@ -46,27 +46,6 @@
 <!-- SIDEBARS  - - - - - - - - - - - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - - - - - - - -->
 
-<div id="translations">
-	ترجمه‌ها:
-	<ul>
-				<li><a href='https://ncase.me/covid-19/'>English (original version)</a></li>
-				<li><a href='https://vrruiz.github.io/covid-19'>Español</a></li>
-				<li><a href='https://leonardoalcantara.github.io/covid-19-pt-br/'>Português</a></li>
-				<li><a href='https://tquev.github.io/covid-19/'>Deutsch</a></li>
-				<li><a href='https://harisont.github.io/covid-19/'>Italiano</a></li>
-				<li><a href='https://jusplathemus.github.io/covid-19/'>Magyar</a></li>
-				<li><a href='https://dcz-self.github.io/covid-19/'>Polski</a></li>
-				<li><a href='https://saskaaloric.github.io/covid-19/'>Srpski</a></li>
-				<li><a href='https://xmac11.github.io/covid-19/'>Ελληνικά</a></li>
-				<li><a href='https://asherbarak.github.io/covid-19/'>עברית</a></li>
-				<li><a href='https://benbennben.github.io/covid-19/'>한국어</a></li>
-				<li><a href='https://eed3si9n.github.io/covid-19/'>日本語</a></li>
-				<li><a href='https://fuhsuann.github.io/covid-19/'>繁體中文</a></li>
-				<li><a href='https://brodafly.github.io/covid-19/'>Български</a></li>
-	</ul>
-
-	
-</div>
 
 <div id="sharing">
 	کمک کنید این پست به
@@ -122,20 +101,10 @@
 
 	<p>من اینجا فقط قسمتی از بخش اول توضیحاتش رو آوردم تا نمودارها و محدودیت رشد رو توش ببینید. اگر دوست دارید شبیه‌سازی کامل رو ببینید می‌تونید به <a href='https://raziehkouch.github.io/covid-19/'>این لینک</a> سر بزنید. البته ترجمه‌اش جای بهتر شدن داره :)</p>
 
-	<ul>
-	<li><strong>چند ماه اخیر</strong> (مقدمه‌ای بر همه‌گیرشناسی، مدل SEIR و R یا R<sub>0</sub>)</li>
-	<li><strong>چند ماه پیش‌رو</strong> (تعطیلی اجباری، ردیابی مخاطب، ماسک‌ها)</li>
-	<li><strong>چند سال آینده</strong> ( از بین رفتن  مصونیت؟ واکسنی نیست؟)</li>
-	</ul>
-
-	<p>این راهنما (ساخته شده در ۱۲ اردیبهشت ۱۳۹۹، روی این پانویس بزنید!←<sup id="fnref1"><a href="#fn1" rel="footnote">1</a></sup>) به وجود اومده تا به شما ترس <em>و</em> امید بده. ما برای این‌که بتونیم راهی برای شکست کووید-۱۹ پیدا کنیم، که بتونه<strong> سلامت روان و سلامت اقتصادمون</strong> رو هم تامین کنه، به خوش‌بینی نیاز داریم تا برنامه‌ای داشته باشیم، و به بدبینی نیاز داریم تا برنامه‌های پشتیبان داشته باشیم. همان‌جور که گلادیس براونین گفته: «<em>یه خوش‌بین هواپیما رو اختراع کرده و یه بدبین چتر نجات رو</em>».</p>
-
-	<p>خب، کمربندهاتون رو ببندین! داریم میریم تا یه سری تلاطم رو تجربه کنیم!</p>
-
 	<div class="section chapter">
 	    <div>
 	        <img src="banners/curve.png" height=480 style="position: absolute;" />
-	        <div>چند ماه اخیر</div>
+	        <div>شبیه‌سازی</div>
 	    </div>
 	</div>
 
@@ -143,13 +112,13 @@
 
 	<p><strong>همه‌گیرشناس‌ها، از شبیه‌ساز همه‌گیری استفاده می‌کنن تا بفمن چه جوری سقوط جامعهٔ‌ بشری رو رقم نزنن!</strong></p>
 
-	<p>خب، بیاید خیلی خیلی ساده یه «شبیه‌ساز-پرواز همه‌گیری» بسازیم! توی این شبیه‌سازی، افراد مبتلای مسری<icon i></icon> می‌تونن افراد مستعد<icon s></icon> رو تبدیل به افراد مبتلای مسری<icon i></icon> بیشتری کنن:</p>
+	<p>خب، بیاید خیلی خیلی ساده یه «شبیه‌ساز همه‌گیری» بسازیم! توی این شبیه‌سازی، افراد مبتلای مسری<icon i></icon> می‌تونن افراد مستعد<icon s></icon> رو تبدیل به افراد مبتلای مسری<icon i></icon> بیشتری کنن:</p>
 
 	<p><img src="pics/spread.png" alt=""></p>
 
 	<p>تخمین زده می‌شه که <em>در ابتدای</em> شیوع کووید-۱۹، به طور <em>میانگین </em> هر چهار روز، ویروس از یک<icon i></icon> به یک<icon s></icon>منتقل می‌شده.<sup id="fnref2"><a href="#fn2" rel="footnote">2</a></sup> (حواس‌تون باشه، آمار خیلی متغیره)</p>
 
-	<p>اگه ما «هر ۴ روز دوبرابر شدن» رو برای جامعه‌‌ای با فقط ۰٫۰۰۱%<span class="nowrap"><icon i></icon>,</span> در نظر بگیریم، چه اتفاقی رخ می‌ده؟ </p>
+	<p>اگه ما «هر ۴ روز دوبرابر شدن» رو برای جامعه‌‌ای که در ابتدا فقط ۰٫۰۰۱ جمعیتش مبتلا %<span class="nowrap"><icon i></icon></span> هستن در نظر بگیریم، چه اتفاقی رخ می‌ده؟ </p>
 
 	<p><strong>روی &quot;شروع&quot; بزن تا بتونی بازی کنی. راستی می‌تونی بعدش تنظیمات رو عوض کنی و دوباره بازی کنی:</strong> (جزئیات فنی: <sup id="fnref3"><a href="#fn3" rel="footnote">3</a></sup>)</p>
 
@@ -157,7 +126,7 @@
 	        <iframe src="sim?stage=epi-1" width="800" height="540"></iframe>
 	</div>
 
-	<p>این <strong>نمودار رشد نمایی</strong> هست. آروم شروع می‌شه و یهو منفجر می‌شه.از «بی‌خیال، فقط یه سرماخوردگی ساده‌‌اس» تا «اوه! آره، سرماخوردگی گور دسته‌جمعی توی یه شهر پولدار به وجود نمیاره!». </p>
+	<p>این <strong>نمودار رشد نمایی</strong> هست. آروم شروع می‌شه و یهو منفجر می‌شه.از «بی‌خیال، فقط یه سرماخوردگی ساده‌‌اس» تا «اوه! آره، سرماخوردگی گور دسته‌جمعی توی یه شهر بزرگ به وجود نمیاره!». </p>
 
 	<p><img src="pics/exponential.png" alt=""></p>
 
